cis 1.13/ingress resources/f5-k8s-ingress-default-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    virtual-server.f5.com/ip: controller-default
  name: default_ip
spec:
  backend:
    serviceName: f5-hello-world
    servicePort: 8080
